--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Hello World!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur corporis a fuga nisi labore architecto, repellat earum tenetur pariatur cum, exercitationem cupiditate veniam, possimus numquam voluptatem! Quibusdam maiores hic sunt.</p>
 </body>
 </html>
